syntax = "proto3"; //Specify proto3 version.

package list;

service ListService {
    rpc NewList(ListName) returns (ListResponse) {}
    rpc GetLists(ListUser) returns (ListList) {}
    rpc DisplayList(ListId) returns (ItemList);
    rpc DeleteList(ListId) returns (deleteSuccess);
    rpc AddItemToList(Item) returns (ItemId);
    rpc DeleteItemFromList(ItemId) returns (deleteSuccess);
  }

  message ListName {
    string listName = 1;
    string userId = 2;
  };

  message ListResponse {
    string listId = 1;
  }

  message ListUser {
    string userId = 1;
  }

  message List {
    string listid = 1;
    string listname = 2;
  }

  message ListList {
    repeated List list = 1;
  }

  message ListId {
    string listId = 1;
  }

  message Item {
    string listid = 1;
    string itemname = 2;
  }

  message ItemList {
    repeated Item item = 1;
  }

  message ItemId {
    string itemid = 1;
  }

  message deleteSuccess {
    bool deleted = 1;
  }

  message itemResponse {
    string itemId = 1;
  }

  message Empty {}